<resources>
    <string-array name="professional_categories">
        <item>Category</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Roofing Contractor</item>
        <item>HVAC Technician</item>
        <item>Locksmith</item>
        <item>Flooring Specialist</item>
    </string-array>
    <string name="app_name">solMatchFinalProject</string>
    <string-array name="genderReg">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="categories">
        <item>Category</item>
        <item>home cooking</item>
        <item>furniture</item>
        <item>food supplies</item>
        <item>other</item>
    </string-array>
    <string-array name="israeliCities">
        <item>City</item>
        <item>Jerusalem</item>
        <item>Tel Aviv</item>
        <item>Haifa</item>
        <item>Rishon LeZion</item>
        <item>Petah Tikva</item>
        <item>Ashdod</item>
        <item>Netanya</item>
        <item>Beer Sheva</item>
        <item>Bnei Brak</item>
        <item>Holon</item>
        <item>Ramat Gan</item>
        <item>Bat Yam</item>
        <item>Ashkelon</item>
        <item>Herzliya</item>
        <item>Kfar Saba</item>
        <item>Raanana</item>
        <item>Rehovot</item>
        <item>Nazareth</item>
        <item>Ramat HaSharon</item>
        <item>Modiin-Maccabim-Reut</item>
        <item>Hadera</item>
        <item>Lod</item>
        <item>Ramla</item>
        <item>Acre</item>
        <item>Bet Shemesh</item>
        <item>Eilat</item>
        <item>Dimona</item>
        <item>Tiberias</item>
        <item>Kiryat Gat</item>
        <item>Nahariya</item>
        <item>Givatayim</item>
        <item>Ness Ziona</item>
        <item>Yavne</item>
        <item>Yehud-Monosson</item>
        <item>Ras al-Ayn</item>
        <item>Tira</item>
        <item>Kafr Qasim</item>
        <item>Sderot</item>
        <item>Tamra</item>
        <item>Afula</item>
        <item>Beit Shean</item>
        <item>Kiryat Shmona</item>
        <item>Migdal HaEmek</item>
        <item>Or Akiva</item>
        <item>Tirat Carmel</item>
        <item>Umm al-Fahm</item>
        <item>Maalot-Tarshiha</item>
        <item>Qalansawe</item>
        <item>Karmiel</item>
        <item>Arad</item>
        <item>Hod HaSharon</item>
    </string-array>
    <string-array name="typeReg">
        <item>Type</item>
        <item>Host</item>
        <item>Soldier</item>
        <item>Professional</item>
    </string-array>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="facebook_app_id">162580503315220</string>
    <string name="facebook_client_token">8d9b490db2f6a60a1e9b73ee7eb01c6c</string>
    <string name="default_notification_channel_id">default_solmatch</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name">testChannel</string>
    <string name="Login">Login</string>
    <string name="forget_password">forget Password?</string>
    <string name="google">google</string>
    <string name="signup">signUp</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="Change_Pic">Change_Pic</string>
    <string name="textview">TextView</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="log_in_string">Log in</string>
    <string name="log_in_to_chatbox_string">Log in to SOL MATCH</string>
    <string name="welcome_back__sign_in_using_your_social_account_or_email_to_continue_us_string">Welcome back! Sign in using your social account or email to continue us</string>
    <string name="or_ek1_string">OR</string>
    <string name="forgot_password__string">Forgot password?</string>
    <string name="your_email_string">Your email</string>
    <string name="password_string">Password</string>
    <string name="Action_making">ביצוע פעולות</string>
    <string name="edit_personal_details">עריכת פרטים אישיים</string>
    <string name="scheduled_events">אירועים מוזמנים</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="repassword">RePassword</string>
    <string name="next">Next</string>
    <string name="already_have_an_acount">already have an acount?</string>
    <string name="submit">Submit</string>
    <string name="_9_41_string">9:41</string>
    <string name="sign_up_with_email_string">Sign up with Email</string>
    <string name="get_chatting_with_friends_and_family_today_by_signing_up_for_our_chat_app__string">Get chatting with friends and family today by signing up for our chat app!</string>
    <string name="profile">Profile</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="create_an_account_string">Create an account</string>
    <string name="your_name_string">your name</string>
    <string name="jhon_abraham_string">Jhon Abraham</string>
    <string name="__jhonabraham_string">jhonabraham</string>
    <string name="display_name_ek1_string">Display Name</string>
    <string name="jhon_abraham_ek1_string">Jhon Abraham</string>
    <string name="email_address_ek1_string">Email Address</string>
    <string name="jhonabraham20_gmail_com_string">jhonabraham20@gmail.com</string>
    <string name="address_ek1_string">Address</string>
    <string name="_33_street_west_subidbazar_sylhet_string">33 street west subidbazar,sylhet</string>
    <string name="phone_number_ek1_string">Phone  Number</string>
    <string name="__320__555_0104_string">(320) 555-0104</string>
    <string name="_3_string">3</string>
    <string name="_2_min_ago_string">2 min ago</string>
    <string name="alex_linderson_string">Alex Linderson</string>
    <string name="how_are_you_today__string">How are you today?</string>
    <string name="_4_string">4</string>
    <string name="_2_min_ago_ek1_string">2 min ago</string>
    <string name="team_align_string">Team Align</string>
    <string name="don_t_miss_to_attend_the_meeting__string">Dont miss to attend the meeting.</string>
    <string name="_2_min_ago_ek2_string">2 min ago</string>
    <string name="john_ahraham_string">John Ahraham</string>
    <string name="hey__can_you_join_the_meeting__string">Hey! Can you join the meeting?</string>
    <string name="home_string">Home</string>
    <string name="forget_password_msg">"Hello, please enter the email you used to register to the app. If the email is correct, we will send you a temporary password "</string>
    <string name="reset_pass">Reset</string>
    <string name="regWithGoogle">register with your Google account</string>
    <string name="allHost">All Host</string>
    <string name="allProf">all Professionals</string>
    <string name="name">Full Name</string>
    <string name="namePro">My Name</string>
    <string name="email">Email Address</string>
    <string name="phoneNum">Phone Number</string>
    <string name="emailPro">My Email</string>
    <string name="password">Password</string>
    <string name="passwordPro">Password</string>
    <string name="gender">Gender</string>
    <string name="genderPro">Gender</string>
    <string name="birthdate">BirthDate</string>
    <string name="birthdayPro">My Birthday</string>
    <string name="type">Type</string>
    <string name="typePro">My Type of user</string>
    <string name="btnEdit">Edit</string>
    <string name="describeUser">description....</string>
    <string name="titleProfPage">Upcoming events:</string>
    <string name="addProfImg">Profile Image:</string>
    <string name="hostingDate">Date</string>
    <string name="hostAddress">Address</string>
    <string name="category">Category</string>
    <string name="avability">Avability</string>
    <string name="AddHostPage">Add Host</string>
    <string name="AddProfessPage">Add Professional Page</string>
    <string name="ui_button_date_title"> click here for Set Date</string>
    <string name="ui_button_time_title">Set Time</string>
    <string name="Addaddress">Add Address</string>
    <string name="AddCategory">Add Category</string>
    <string name="setDate">Choose the day of accommodation </string>
    <string name="setTime">Choose the time of accommodation</string>
    <string name="descriptionOfHost">please add description</string>
    <string name="phuneNum">add phone number</string>
    <string name="availability">availability</string>
    <string name="percentage">0%</string>
    <string name="imgOfLocation">Please add an image of the accommodation location to be displayed to the user. </string>
    <string name="titleSwitches">Please fill in the following details:</string>
    <string name="accommodationOption">Allow accommodation?</string>
    <string name="petsOption">Do you have pets?</string>
    <string name="privateRoomOption">Is the accommodation in a private room?</string>
    <string name="secureOption">Secure environment?</string>
    <string name="titleFragment">Accommodation details:</string>
    <string name="titleDonFragment">Donations details Page:</string>
    <string name="secTitleFragment"> Hello! Here you can view the details of the selected accommodation</string>
    <string name="donationtitle"> Hello! Here you can view the details of the selected donation</string>
    <string name="locationImg">View the accommodation location image:</string>
    <string name="donationImg">View the image of the donation:</string>
    <string name="Accommodationlocationdetails">Accommodation Details:</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnsave">Ok</string>
    <string name="channel_name">solmatch</string>
    <string name="channel_description">solmatchdescription</string>
    <string name="ItenNamePrompt">Name</string>
    <string name="addDonation">hello please follow the instractions</string>
    <string name="itemImage">image</string>
    <string name="AddItem">add</string>
    <string name="location">Location</string>
    <string name="shortDescription">description</string>
    <string name="add">ADD</string>
    <string name="ItemName">Item</string>
    <string name="catagory">Catagory</string>
    <string name="description">description</string>
    <string name="startChat">start chat</string>
    <string name="AllDonations">All Donations</string>
    <string name="searchText">Search</string>
    <string name="searchDon">look for donation...</string>
    <string name="intrests">Intrests</string>
    <string name="intretsDesc">hello please fill some of the intrests described here to make the hosts feel more comfortebly around you</string>
    <string name="tellUs">please tell us about yourself in a few sentences</string>
    <string name="upload_image">upload</string>
    <string name="dialog_message">are you sure you want to add this user to be hosted?</string>
    <string name="dialog_title">Confirm</string>
    <string name="dialog_messageLogOut">Are you sure you want to LogOut??</string>
    <string name="dialog_titleLogOut">LogOut</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="personal_de">Personal Details</string>
    <string name="userName">name</string>
    <string name="phone">Phone</string>
    <string name="hosts">All Host</string>
    <string name="aboutMe">About me</string>
    <string name="ViewProfessional">View Professional Details:</string>
    <string name="descriptionProf">description</string>
    <string name="comments">comments</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_history">History</string>
    <string name="Add">Add Event</string>
    <string name="review">Reviews</string>
    <string name="rating">rating</string>
</resources>