<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bt_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/addEvent"
            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="@string/Add" />
        <item
            android:id="@+id/bt_history"
            android:icon="@drawable/ic_service_history"
            android:title="@string/menu_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="Share" />
        </menu>
    </item>
    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/bt_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>