<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip"
    tools:context="Fragment.AlertDialogFragmentViewHost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/titleFragment"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/hostingDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:text="@string/secTitleFragment"
        android:textColor="@color/log_in_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/hostDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTexthostingAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/baseline_search_24"
        android:ems="10" />

    <EditText
        android:id="@+id/editTexthostingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/baseline_calendar_today_24" />

    <TextView
        android:id="@+id/locationImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/locationImg"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageOfLocation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Accommodationlocationdetails"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkboxaccomodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:text="@string/accommodationOption" />

    <CheckBox
        android:id="@+id/checkboxPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petsOption"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"/>

    <CheckBox
        android:id="@+id/checkboxprivateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privateRoomOption"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"/>

    <CheckBox
        android:id="@+id/checkboxsecureOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secureOption"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"/>


        <Button
            android:id="@+id/saveBtn"
            android:text="@string/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="#404040"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            />





</LinearLayout>

