<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertDialogFragmentViewProf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/log_in_to_chatbox_color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/ViewProfessional"/>

        <TextView
            android:id="@+id/descriptionProfessional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/log_in_to_chatbox_color"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:text="@string/descriptionProf"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/log_in_to_chatbox_color"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:backgroundTint="#404040"
            android:text="@string/ok"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>